--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,10 @@ yarn-debug.log*
 yarn-error.log
 .ruby-version
 .vscode/
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
